# snap-window

./: .gitignore  Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-03-SUMMARY.md
.planning/phases/02-window-discovery/: 02-01-SUMMARY.md
.planning/phases/03-window-targeting/: 03-01-SUMMARY.md
.planning/phases/04-screenshot-capture/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-highlight-mode/: 05-01-PLAN.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md
.planning/phases/06-support-regexp-title/: 06-01-SUMMARY.md  06-02-SUMMARY.md
.planning/phases/07-support-wayland/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md
.planning/phases/08-wayland-highlight-cleanup/: 08-02-SUMMARY.md
src/: capture_service.rs  cli.rs  error.rs  highlight_service.rs  json_export.rs  lib.rs  main.rs  window.rs  window_service.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/linux/: detector.rs  layer_shell.rs  mod.rs  wayland.rs  x11.rs
tests/: cli_regex_tests.rs  cli_tests.rs  platform_tests.rs
