[package]
name = "snap-window"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI window screenshot tool"
authors = ["snap-window contributors"]
license = "MIT"
repository = "https://github.com/example/snap-window"

[[bin]]
name = "snap-window"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
