[package]
name = "snap-window"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI window screenshot tool"
authors = ["snap-window contributors"]
license = "MIT"
repository = "https://github.com/example/snap-window"

[lib]
name = "snap_window"
path = "src/lib.rs"

[[bin]]
name = "snap-window"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
xcap = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSApplication", "NSScreen", "NSView", "NSRunningApplication", "NSGraphicsContext"] }
objc2-foundation = "0.3"
objc2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
